[package]
name = "astroxide"
version = "0.0.15"
edition = "2024"
description = "Astronomy utils for Rust."
license = "MIT"


[dependencies]
colored = "3.1.1"
fmtastic = "0.2.2"
kiddo = "5.2.2"
libm = "0.2.15"
paste = "1.0.15"
phf = { version = "0.12.1", features = ["macros"] }
rayon = "1.11.0"
thiserror = "2.0.18"
